[gd_scene load_steps=10 format=3 uid="uid://o0r0hwtawlmq"]

[ext_resource type="Script" uid="uid://uwkog7apesq5" path="res://scripts/loop_manager.gd" id="1_loop_manager"]
[ext_resource type="Texture2D" uid="uid://cubjbpa53wlsj" path="res://Assets/Background/city 5/7.png" id="2_8jvti"]
[ext_resource type="FontFile" uid="uid://cyo4hmx70iwwv" path="res://Assets/UI/Font/Press_Start_2P/PressStart2P-Regular.ttf" id="2_v6fmi"]
[ext_resource type="Texture2D" uid="uid://b1kobfbxvosml" path="res://Assets/cursor.png" id="3_v6fmi"]
[ext_resource type="Texture2D" uid="uid://cqvhxsshdcl5x" path="res://Assets/desktop icons.png" id="4_m7j5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(1200, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21y47"]
size = Vector2(47, 805)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuu2o"]
atlas = ExtResource("4_m7j5a")
region = Rect2(30.6652, -0.889256, 67.1163, 33.2969)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtrkb"]
atlas = ExtResource("4_m7j5a")
region = Rect2(63.462, 33.853, 32.6444, 27.5004)

[node name="Room" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
z_index = -2
offset_left = 4.0
offset_top = 32.0
offset_right = 1196.0
offset_bottom = 796.0
color = Color(0.1, 0.2, 0.3, 1)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(600, 750)

[node name="FloorSprite" type="ColorRect" parent="Floor"]
offset_left = -600.0
offset_top = -50.0
offset_right = 600.0
offset_bottom = 50.0
color = Color(0.3, 0.4, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_floor")

[node name="LoopManager" type="Node2D" parent="."]
script = ExtResource("1_loop_manager")

[node name="CardDropRight" type="Marker2D" parent="LoopManager"]
position = Vector2(900, 100)

[node name="CardDropLeft" type="Marker2D" parent="LoopManager"]
position = Vector2(300, 100)

[node name="CardDropCenter" type="Marker2D" parent="LoopManager"]
position = Vector2(600, 100)

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(25, 400)

[node name="LeftWallShape" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-1.5, 5.5)
shape = SubResource("RectangleShape2D_21y47")

[node name="LeftWallSprite" type="ColorRect" parent="LeftWall"]
offset_left = -25.0
offset_top = -400.0
offset_right = 25.0
offset_bottom = 400.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1175, 400)

[node name="RightWallSprite" type="ColorRect" parent="RightWall"]
offset_left = -25.0
offset_top = -400.0
offset_right = 25.0
offset_bottom = 400.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="RightWallShape" type="CollisionShape2D" parent="RightWall"]
position = Vector2(3, 16)
shape = SubResource("RectangleShape2D_21y47")

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(600, 25)

[node name="TopWallShape" type="CollisionShape2D" parent="TopWall"]
shape = SubResource("RectangleShape2D_floor")

[node name="TopWallSprite" type="ColorRect" parent="TopWall"]
offset_left = -600.0
offset_top = -25.0
offset_right = 600.0
offset_bottom = 25.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 64.0
offset_top = 423.0
offset_right = 474.0
offset_bottom = 683.0
theme_override_fonts/normal_font = ExtResource("2_v6fmi")
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[wave]maybe one glance at the loop is not enough, try playing with the conditional statements?

If Blocks: will trigger ONE code block below if the condition is met
Hint:  
Greater than(>) only occurs after n loops, e.g. > 5 happens when looped 5 times or more

Modulo(%) only occurs every nth loop e.g. % 2 happens every second loop"

[node name="Background2" type="ColorRect" parent="."]
z_index = -20
offset_left = -780.0
offset_top = -618.0
offset_right = 2653.0
offset_bottom = 1429.0
color = Color(0.0116689, 0.00456869, 0.0532089, 1)
metadata/_edit_lock_ = true

[node name="7" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.227451)
z_index = -1
position = Vector2(606, 394)
scale = Vector2(0.496962, 0.561728)
texture = ExtResource("2_8jvti")

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(298, 645)
texture = ExtResource("3_v6fmi")

[node name="Cursor2" type="Sprite2D" parent="."]
position = Vector2(1034.38, 748)
scale = Vector2(2.93657, 2.62121)
texture = SubResource("AtlasTexture_iuu2o")

[node name="Cursor3" type="Sprite2D" parent="."]
position = Vector2(1095, 118)
scale = Vector2(2.93657, 2.62121)
texture = SubResource("AtlasTexture_jtrkb")

[node name="Label7" type="Label" parent="."]
offset_left = 1061.0
offset_top = 152.0
offset_right = 1135.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 19
text = "Chrome"
