[gd_scene load_steps=9 format=3 uid="uid://cqkxy4yf8v85d"]

[ext_resource type="Script" uid="uid://uwkog7apesq5" path="res://scripts/loop_manager.gd" id="1_ggc1m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffxv4"]
size = Vector2(1087, 92.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85yof"]
size = Vector2(290, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(431, 92.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall"]
size = Vector2(50, 800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggc1m"]
size = Vector2(1854, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_death"]
size = Vector2(2869.5, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nr85e"]
size = Vector2(89, 80)

[node name="Room" type="Node2D"]
position = Vector2(-10, 660)

[node name="Background" type="ColorRect" parent="."]
offset_left = 47.0
offset_top = -2.0
offset_right = 1848.0
offset_bottom = 798.0
color = Color(0.2, 0.2, 0.3, 1)
metadata/_edit_use_anchors_ = true

[node name="FloorLeft" type="StaticBody2D" parent="."]
position = Vector2(350, 750)

[node name="FloorLeftShape" type="CollisionShape2D" parent="FloorLeft"]
position = Vector2(241.5, -2)
shape = SubResource("RectangleShape2D_ffxv4")

[node name="FloorLeftSprite" type="ColorRect" parent="FloorLeft"]
offset_left = -301.0
offset_top = -49.0
offset_right = 783.0
offset_bottom = 51.0
color = Color(0.4, 0.3, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="FloorRight" type="StaticBody2D" parent="."]
position = Vector2(850, 750)

[node name="FloorRightShape" type="CollisionShape2D" parent="FloorRight"]
position = Vector2(857, 1)
shape = SubResource("RectangleShape2D_85yof")

[node name="FloorRightSprite" type="ColorRect" parent="FloorRight"]
offset_left = 763.0
offset_top = -49.0
offset_right = 1003.0
offset_bottom = 51.0
color = Color(0.4, 0.3, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="Hole" type="StaticBody2D" parent="."]
position = Vector2(850, 750)

[node name="HoleShape" type="CollisionShape2D" parent="Hole"]
position = Vector2(497.5, -2)
shape = SubResource("RectangleShape2D_floor")

[node name="HoleSprite" type="ColorRect" parent="Hole"]
offset_left = 276.0
offset_top = -49.0
offset_right = 763.0
offset_bottom = 51.0
color = Color(0.4, 0.3, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(25, 400)

[node name="LeftWallShape" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_wall")

[node name="LeftWallSprite" type="ColorRect" parent="LeftWall"]
offset_left = -25.0
offset_top = -400.0
offset_right = 25.0
offset_bottom = 400.0
color = Color(0.1, 0.1, 0.1, 1)
metadata/_edit_use_anchors_ = true

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1175, 400)

[node name="RightWallShape" type="CollisionShape2D" parent="RightWall"]
position = Vector2(644, 10)
shape = SubResource("RectangleShape2D_wall")

[node name="RightWallSprite" type="ColorRect" parent="RightWall"]
offset_left = 630.0
offset_top = -395.0
offset_right = 680.0
offset_bottom = 405.0
color = Color(0.1, 0.1, 0.1, 1)
metadata/_edit_use_anchors_ = true

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(600, 25)

[node name="TopWallShape" type="CollisionShape2D" parent="TopWall"]
position = Vector2(329, -5)
shape = SubResource("RectangleShape2D_ggc1m")

[node name="TopWallSprite" type="ColorRect" parent="TopWall"]
offset_left = -600.0
offset_top = -25.0
offset_right = 1249.0
offset_bottom = 25.0
color = Color(0.1, 0.1, 0.1, 1)
metadata/_edit_use_anchors_ = true

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(600, 825)

[node name="DeathZoneShape" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(414.25, -647)
shape = SubResource("RectangleShape2D_death")

[node name="LoopManager" type="Node2D" parent="."]
script = ExtResource("1_ggc1m")

[node name="Spawn1" type="Marker2D" parent="LoopManager"]
position = Vector2(633, -202)

[node name="Spawn2" type="Marker2D" parent="LoopManager"]
position = Vector2(923, -119)

[node name="Spawn3" type="Marker2D" parent="LoopManager"]
position = Vector2(923, -119)

[node name="Spawn4" type="Marker2D" parent="LoopManager"]
position = Vector2(923, -119)

[node name="Instructions" type="Label" parent="."]
offset_left = 600.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 50.0
text = ",':/"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 42.0
offset_top = -175.0
offset_right = 369.0
offset_bottom = -43.0
bbcode_enabled = true
text = "[wave] Out of bounds Error...

Expected \" at line 32: Label.text = \"For Developers: for each unique position an object appears within a scene; It is called n times within the loop"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="some parkour blocks" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(-10, 660)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D"]
offset_left = 894.0
offset_top = 554.0
offset_right = 983.0
offset_bottom = 636.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D"]
position = Vector2(938, 596)
shape = SubResource("RectangleShape2D_nr85e")

[node name="StaticBody2D2" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(168, -123)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D2"]
offset_left = 1013.0
offset_top = 1255.0
offset_right = 1102.0
offset_bottom = 1337.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D2"]
position = Vector2(1055, 1295)
shape = SubResource("RectangleShape2D_nr85e")

[node name="StaticBody2D3" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(385, -131)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D3"]
offset_left = 1051.0
offset_top = 1244.0
offset_right = 1140.0
offset_bottom = 1326.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D3"]
position = Vector2(1096, 1285)
shape = SubResource("RectangleShape2D_nr85e")

[node name="StaticBody2D4" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(614, -262)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D4"]
offset_left = 1051.0
offset_top = 1244.0
offset_right = 1140.0
offset_bottom = 1326.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D4"]
position = Vector2(1096, 1285)
shape = SubResource("RectangleShape2D_nr85e")

[node name="StaticBody2D5" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(331, -391)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D5"]
offset_left = 1051.0
offset_top = 1244.0
offset_right = 1140.0
offset_bottom = 1326.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D5"]
position = Vector2(1096, 1285)
shape = SubResource("RectangleShape2D_nr85e")

[node name="StaticBody2D6" type="StaticBody2D" parent="some parkour blocks"]
position = Vector2(31, -425)

[node name="ColorRect" type="ColorRect" parent="some parkour blocks/StaticBody2D6"]
offset_left = 1051.0
offset_top = 1244.0
offset_right = 1140.0
offset_bottom = 1326.0
color = Color(0.301961, 0.105882, 0.133333, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="some parkour blocks/StaticBody2D6"]
position = Vector2(1096, 1285)
shape = SubResource("RectangleShape2D_nr85e")
